# procwatch

./: .coverage  .gitignore  README.md  coverage.html  coverage.xml  pyproject.toml  requirements-dev.txt
.github/workflows/: docs.yml  lint.yml  release.yml  test.yml
docs/: cli.md  conf.py  index.rst  installation.md
latest/: cli.html  genindex.html  index.html  installation.html  objects.inv  searchindex.js
latest/.doctrees/: environment.pickle  index.doctree  installation.doctree
src/procwatch/: cli.py
src/procwatch.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_cli.py
tmp/: test.py
v0.1.5/: .buildinfo  search.html  usage.html
v0.1.5/.doctrees/: cli.doctree  usage.doctree
v0.1.5/_sources/: usage.md.txt
