[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "procwatch"
dynamic = ["version"]
description = "Process watchdog CLI for monitoring and restarting services"
readme = "README.md"
requires-python = ">=3.10"

authors = [{ name = "Your Name" }]

license = { file = "LICENCE" }

dependencies = ["psutil>=5.9"]
[project.optional-dependencies]
dev = ["types-psutil"] # satisfies `mypy` linter

[project.scripts]
procwatch = "procwatch.cli:main"

[tool.setuptools.dynamic]
version = { file = "VERSION" }
